--- a/application/admin/view/goods/index.html
+++ b/application/admin/view/goods/index.html
@@ -1,6 +1,6 @@
 {include file="public/header"}
 <link href="__PUBLIC__/static/admin/shop/form.css" rel="stylesheet" type="text/css">
-<h1 class="page-title">商品分类管理</h1>
+<h1 class="page-title">商品管理</h1>
 <a class="btn btn-info" href="{:url('add')}">添加商品</a>
 <a class="btn btn-danger" onclick="$('.delSub').click()">批量删除</a>
 <form action="{:url('delAll')}" id="form-del">
